<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentBooks"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userID.layout"
        style="@style/TextInputLayout"
        android:hint="@string/userID"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userID"
            style="@style/TextInputEditText"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bookName.layout"
        style="@style/TextInputLayout"
        android:hint="@string/bookName"
        app:layout_constraintTop_toBottomOf="@id/userID.layout"
        tools:ignore="MissingConstraints">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bookName"
            style="@style/TextInputEditText"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bookISBN.layout"
        style="@style/TextInputLayout"
        android:hint="@string/bookISBN"
        app:layout_constraintTop_toBottomOf="@+id/bookName.layout"
        tools:ignore="MissingConstraints">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bookISBN"
            style="@style/TextInputEditText"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bookAuthor.layout"
        style="@style/TextInputLayout"
        android:hint="@string/bookAuthor"
        app:layout_constraintTop_toBottomOf="@id/bookISBN.layout"
        tools:ignore="MissingConstraints">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bookAuthor"
            style="@style/TextInputEditText"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bookDescription.layout"
        style="@style/TextInputLayout"
        android:hint="@string/bookDescription"
        app:layout_constraintTop_toBottomOf="@id/bookAuthor.layout"
        tools:ignore="MissingConstraints">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bookDescription"
            style="@style/TextInputEditText"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bookPrice.layout"
        style="@style/TextInputLayout"
        android:hint="@string/bookPrice"
        app:layout_constraintTop_toBottomOf="@+id/bookDescription.layout"
        tools:ignore="MissingConstraints">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bookPrice"
            style="@style/TextInputEditText"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bookPriceTabulated.layout"
        style="@style/TextInputLayout"
        android:hint="@string/final_price"
        app:layout_constraintTop_toBottomOf="@id/bookPrice.layout"
        tools:ignore="MissingConstraints">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bookPriceTabulated"
            style="@style/TextInputEditText"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/bookButtonTabulate"
        android:text="@string/bookButtonTabulate"
        style="@style/Button.Contained"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/bookPriceTabulated.layout"
        app:layout_constraintLeft_toRightOf="@id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@id/guidelineRight"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bookList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/bookButtonTabulate"
        app:layout_constraintLeft_toRightOf="@id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@id/guidelineRight">
    </androidx.recyclerview.widget.RecyclerView>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        style="@style/GuidelineDefaults"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        style="@style/GuidelineDefaults"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        style="@style/GuidelineDefaults"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        style="@style/GuidelineDefaults"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.99"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCentre"
        style="@style/GuidelineDefaults"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>
</androidx.constraintlayout.widget.ConstraintLayout>